# turingosv5

./: .gitignore  AGENTS.md  AGENT_ENTRY.md  CHARTER.md  CLAUDE.md  CODEX.md  Cargo.toml  GEMINI.md  GENESIS_PLAN.md  HARNESS.md  HARNESS_MANUAL.md  Makefile  PROJECT_PLAN.md  README.md  TURINGOS_V5_FINAL_HARNESS_PLAN_v0.7.md  VIA_NEGATIVA.md  constitution.md  genesis_payload.toml  h_vppu_history.json
.github/: CODEOWNERS  pull_request_template.md
cases/: C-001_post_genesis_minting.yaml  C-002_redistribute_pool_rebirth.yaml  C-003_oracle_midstep_blocking.yaml  C-004_kernel_domain_leak.yaml  C-005_greedy_router.yaml  C-006_falsifier_perverse_incentive.yaml  C-007_tls_deadlock.yaml  C-008_proxy_502.yaml  C-009_format_fragility.yaml  C-010_generator_equals_evaluator.yaml  C-011_brute_force_formalization.yaml  C-012_measurement_correctness.yaml  C-013_fake_depth_dedup.yaml  C-014_identity_theft.yaml  C-015_sorry_cheating.yaml  C-016_oracle_determinism.yaml  C-017_silent_failure.yaml  C-018_wallet_semantics.yaml  C-019_price_waveform.yaml  C-020_obsolete_threshold.yaml  C-021_smart_model_shallow.yaml  C-022_context_poisoning.yaml  C-023_dual_chamber.yaml  C-024_investment_crowds_building.yaml  C-025_attention_dilution.yaml  C-026_multistep_packing.yaml  C-027_hardcoded_params.yaml  C-028_tmp_data_loss.yaml  C-029_joinset_silent_exit.yaml  C-030_cascade_failure.yaml  C-031_institution_over_tuning.yaml  C-032_oracle_mode_contamination.yaml  C-033_causal_attribution.yaml  C-034_over_alignment_dogmatism.yaml  (+20 more)
docs/: rules.md  (+4 more)
spike/gix_capability/: Cargo.toml
spike/gix_capability/results/: SPIKE_RESULT_2026-04-27.md
spike/gix_capability/src/: c1_init.rs  c2_multi_parent.rs  c3_tree_parent_read.rs  c4_concurrent_init.rs  c5_cas_blob.rs  c6_perf_benchmark.rs  c7_replay.rs  c8_hooks_compat.rs  lib.rs  main.rs
(+1885 files in other folders)
