[package]
name = "turingosv4"
version = "0.1.0"
edition = "2021"
description = "Silicon-Native Microkernel for LLM Formal Verification Swarm"

[features]
web = ["axum", "tower-http", "tokio-tungstenite"]

[dependencies]
argon2 = "0.5"
axum = { version = "0.7", optional = true, features = ["ws"] }
bincode = { version = "2", features = ["serde"] }
chacha20poly1305 = "0.10"
ed25519-dalek = "2"
flate2 = "1"
getrandom = "0.2"
git2 = { version = "0.20", default-features = false }
libc = "0.2"
log = "0.4"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
secrecy = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros", "process", "io-util", "sync"] }
tokio-tungstenite = { version = "0.21", optional = true }
tower-http = { version = "0.5", optional = true, features = ["trace"] }
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[[bin]]
name = "turingos_web"
path = "src/bin/turingos_web.rs"
required-features = ["web"]

[workspace]
members = [".", "spike/gix_capability"]
exclude = ["experiments/minif2f_v4"]
